namespace.yml
---
apiVersion: v1
kind: Namespace
metadata:
   name: dev
   labels:
     name: dev
